# Django-VAT-Boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.old  README.md  db.sqlite  docker-compose.yml  docker-entrypoint.sh  env.example.storage  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  vite.config.mjs
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
_static/: manifest.json
apps/content/models/: seo.py
apps/core/migrations/: 0001_initial.py
apps/portal/: admin.py  context_processors.py
apps/portal/migrations/: 0001_initial.py  0002_alter_config_site.py  0003_alter_config_site.py  0004_alter_config_gtm_id.py  0005_alter_config_site.py  0006_alter_config_site.py
apps/portal/models/: config.py
conf/settings/: base.py  production.py  project.py
conf/settings/initializers/: database.py  filer.py  logging.py  s3.py  storage.py  vite.py
templates/: _base.html  index.html
templates/includes/: header.html
