[project]
name = "django-vat-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.*",
    "django-admin-interface>=0.30.1",
    "django-admin-sortable2>=2.2.8",
    "django-cotton>=2.1.3",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-filer>=3.3.2",
    "django-tinymce>=4.1.0",
    "django-vite>=3.1.0",
    "djangoql>=0.18.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "docutils>=0.22",
    "drf-spectacular>=0.28.0",
    "easy-thumbnails>=2.10.1",
    "gunicorn>=23.0.0",
    "markdown>=3.9",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pytz==2025.2",
    "tzdata==2025.2",
]
